# battleship

./: README.md  pyproject.toml  requirements-dev.txt
battleship/: board.py  game.py  main.py  ship.py
tests/: test_board.py  test_game.py  test_ship.py
