[tool.poetry]
name = "battleship"
version = "0.1.0"
description = "A solution to the battleship exercise."
authors = ["mhadam <michael@hadam.us>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
